[gd_scene load_steps=5 format=2]

[ext_resource path="res://Guns/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Guns/Shotgun/ShotgunShell.gd" type="Script" id=2]
[ext_resource path="res://Guns/Shotgun/Shotgun Shell.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 13.6015

[node name="Shotgun Shell" instance=ExtResource( 1 )]

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="Sprite/Hit Area" index="0"]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite" index="2"]
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Sprite/Sprite2" index="0"]

[node name="Sprite3" type="Sprite" parent="Sprite" index="3"]
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D_2" type="VisibilityNotifier2D" parent="Sprite/Sprite3" index="0"]

[connection signal="screen_exited" from="Sprite/Sprite2/VisibilityNotifier2D" to="Sprite" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="Sprite/Sprite3/VisibilityNotifier2D_2" to="Sprite" method="_on_VisibilityNotifier2D_2_screen_exited"]
